<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_shot"
    android:orientation="vertical"
    android:gravity="bottom|top" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/mainActivity_Background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/text_welcome" />
    
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:text="@string/button_shot"
        android:id="@+id/button_shot"
        android:contentDescription="@string/button_shot"
        android:src="@drawable/button_camera_activity"
        android:scaleType="fitCenter"
        android:background="@color/transparent"
        android:layout_weight="100"
        android:paddingBottom="10dp"
        />
        
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_gallery"
        android:id="@+id/button_gallery"
        android:layout_weight="0.001"
        android:background="@drawable/button_gallery"
        android:textColor="@android:color/white"
        android:paddingTop="10dp"

        />
        
</LinearLayout>
    

